FastAPI 및 utils.py에서 불필요한 임포트 제거 및 코드 정리 requirements.txt에서 패키지 정리 및 의존성 업데이트

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 fastapi
-uvicorn
-faiss-cpu
-openai
-python-dotenv
-langchain
-langchain_community
-tiktoken
+uvicorn[standard]
 jinja2
+langchain>=0.1.14
+langchain-openai>=0.0.5
+openai>=1.3.5
+python-dotenv
+faiss-cpu
+tqdm
+pydantic>=2.0
