--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]
 jinja2
 langchain>=0.1.14
 langchain-openai>=0.0.5
+langchain-community>=0.0.21
 openai>=1.3.5
 python-dotenv
 faiss-cpu
