--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-fastapi
-uvicorn[standard]
-jinja2
-langchain>=0.1.14
-langchain-openai>=0.0.5
-langchain-community>=0.0.21
-openai>=1.3.5
-python-dotenv
-faiss-cpu
+qdrant-client
+openai
+langchain
+langchain-openai
 tqdm
-pydantic>=2.0
+python-dotenv
+pandas
