requirements.txt 수정: fastapi 및 qdrant-client 순서 변경, 불필요한 uvicorn[standard] 제거

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-qdrant-client
+fastapi
+uvicorn[standard]
 openai
 langchain
 langchain-openai
-tqdm
+qdrant-client
 python-dotenv
+tqdm
 pandas
-uvicorn[standard]
